...
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title: const Text('Watchlist'),
      ),
      body: Padding(
        padding: const EdgeInsets.all(8.0),
        child: Column(
          crossAxisAlignment: CrossAxisAlignment.start,
          children: [
...
                    setState(() {
                      _tag = Tag.movie;
                    });
                  },
                ),
                FilterChip(
                  key: const Key('tv_series_filter_chip'),
                  label: const Text('Tv Series'),
                  selected: _tag == Tag.tv,
                  onSelected: (_) {
                    setState(() {
                      _tag = Tag.tv;
                    });
...
